@@ -2388,10 +2388,6 @@ This is a very simple texi manual @  &lt;&gt;.
 <p>in footnote
 </p><h3><a name="FOOT2" href="#DOCF2">(2)</a></h3>
 <p>in footnote2
-</p><h3><a name="FOOT1" href="#DOCF1">(1)</a></h3>
-<p>in footnote
-</p><h3><a name="FOOT2" href="#DOCF2">(2)</a></h3>
-<p>in footnote2
 </p><h3><a name="FOOT3" href="#DOCF3">(3)</a></h3>
 <p>in footnote
 </p><h3><a name="FOOT4" href="#DOCF4">(4)</a></h3>
