@@ -81,7 +81,7 @@ ul.toc {list-style: none}
 
 
 <p>This is a test manual, trivially and explicitly in the public
-domain<a name="DOCF1" href="index_special_region_fot.html#FOOT1">(1)</a>.
+domain<a href="index_special_region_fot.html#t_hcopying_FOOT1">(1)</a>.
 </p>
 
 
